deploy: 6c4a061bc2576e7610728919a75d303f4bcf3448

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Ecommerce_Blazor</title>
-    <base href="/Ecommerce_Blazor/" />
+    <base href="/Ecommerce/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Ecommerce_Blazor.styles.css" rel="stylesheet" />
